# SRG.Dashboard

./: .gitignore  Telem  Test Dashboard.html  app.js  config.example.js  index.html  push_to_dash.py  styles.css
.github/workflows/: deploy.yml
backend/: .gitignore  Cargo.toml  README.md
backend/src/: main.rs
cubesat/: Cargo.toml  README.md
cubesat/src/: main.rs
scripts/: build-config.js
