[package]
name = "srg-dashboard-backend"
version = "0.1.0"
edition = "2021"
description = "CubeSat-SIM Ground Station — Telemetry API Server (Rust)"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
