[package]
name = "srg-cubesat-api"
version = "0.1.0"
edition = "2021"
description = "CubeSat-SIM Telemetry API — runs on Raspberry Pi"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
